set covid title

--- a/templates/views/covid.hbs
+++ b/templates/views/covid.hbs
@@ -53,6 +53,6 @@
 </div>
 
 <script>
-    $('title').html('深圳大学安省校友会-理事会');
+    $('title').html('深圳大学安省校友会-安省Covid-19疫情动态');
 </script>
 {{>footer}}  
