--- a/templates/views/covid.hbs
+++ b/templates/views/covid.hbs
@@ -11,7 +11,7 @@
     </nav>
 </div>
 
-<div class="container-fluid" id="council">
+<div class="container-fluid" id="covid">
     <div class="row justify-content-center">
         <div class="col col-md-9 py-3 table-responsive">
             <h1 class="text-center">安省Covid-19疫情动态</h1>
